--- a/src/package.json
+++ b/src/package.json
@@ -3,52 +3,51 @@
   "version": "0.1.0",
   "description": "Free browser based linux machines running on AWS EC2.",
   "license": "Refer to LICENSE.md",
-  "main": "index.js",
+  "dependencies": {
+    "basic-auth": "~2.0.1",
+    "cidr-matcher": "2.1.1",
+    "colors": "~1.4.0",
+    "debug": "^4.1.1",
+    "express": "~4.17.1",
+    "express-session": "~1.17.0",
+    "morgan": "~1.9.1",
+    "read-config-ng": "^3.0.1",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.4.1",
+    "ssh2": "~0.8.8",
+    "validator": "^12.2.0"
+  },
   "scripts": {
     "start": "node index.js",
+    "build": "webpack --progress --colors --config scripts/webpack.prod.js",
+    "builddev": "webpack --progress --colors --config scripts/webpack.dev.js",
+    "analyze": "webpack --json --config scripts/webpack.prod.js | webpack-bundle-size-analyzer",
     "test": "snyk test",
     "watch": "nodemon index.js",
     "standard": "standard --verbose --fix | snazzy"
   },
-  "dependencies": {
-    "aws-sdk": "^2.844.0",
-    "basic-auth": "~2.0.1",
-    "cidr-matcher": "2.1.1",
-    "colors": "~1.4.0",
-    "debug": "^4.3.1",
-    "dotenv": "^8.2.0",
-    "express": "~4.17.1",
-    "express-session": "^1.17.1",
-    "morgan": "~1.9.1",
-    "serve-favicon": "^2.5.0",
-    "socket.io": "^2.4.1",
-    "ssh2": "^0.8.9",
-    "uuid": "^8.3.2",
-    "validator": "^12.2.0"
-  },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^3.6.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.4.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.1.0",
     "nodaemon": "0.0.5",
     "postcss-discard-comments": "^4.0.2",
     "snazzy": "^8.0.0",
-    "snyk": "^1.454.0",
-    "standard": "^14.3.4",
-    "standard-version": "^9.1.0",
-    "style-loader": "^1.3.0",
+    "standard": "^14.3.1",
+    "standard-version": "^9.1.1",
+    "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^3.0.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2",
     "webpack-stream": "^5.2.1",
-    "xterm": "^4.10.0",
+    "xterm": "^4.4.0",
     "xterm-addon-fit": "^0.3.0",
     "xterm-addon-search": "^0.5.0",
     "xterm-addon-web-links": "^0.2.1"
