--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,25 +1,32 @@
 {
   "name": "Flimble",
-  "version": "0.1.0",
-  "description": "Free browser based linux machines running on AWS EC2.",
-  "license": "Refer to LICENSE.md",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "snyk test",
     "watch": "nodemon index.js",
-    "standard": "standard --verbose --fix | snazzy"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "aws-sdk": "^2.844.0",
     "basic-auth": "~2.0.1",
+    "bcrypt": "^5.0.1",
     "cidr-matcher": "2.1.1",
     "colors": "~1.4.0",
+    "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
-    "express": "~4.17.1",
+    "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "path": "^0.12.7",
+    "pg": "^8.5.1",
+    "redis": "^3.1.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.4.1",
     "ssh2": "^0.8.9",
@@ -35,10 +42,6 @@
     "css-loader": "^3.6.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.1.0",
-    "nodaemon": "0.0.5",
-    "postcss-discard-comments": "^4.0.2",
-    "snazzy": "^8.0.0",
-    "snyk": "^1.454.0",
     "standard": "^14.3.4",
     "standard-version": "^9.1.0",
     "style-loader": "^1.3.0",
