--- a/src/server/package.json
+++ b/src/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "get-port": "^5.1.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
