--- a/src/client/ssh/package.json
+++ b/src/client/ssh/package.json
@@ -15,6 +15,7 @@
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.4.1",
     "ssh2": "~0.8.8",
+    "sweetalert2": "^10.16.2",
     "validator": "^12.2.0"
   },
   "watch": {
