Added AWS booting functions as well as an ability to add new users to machine.

--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^6.15.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.1"
   },
   "watch": {
