--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,49 +12,27 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.886.0",
-    "basic-auth": "~2.0.1",
+    "basic-auth": "^2.0.1",
     "bcrypt": "^5.0.1",
     "cidr-matcher": "2.1.1",
-    "colors": "~1.4.0",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
-    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "generate-password": "^1.6.0",
     "get-port": "^5.1.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1",
     "path": "^0.12.7",
     "pg": "^8.5.1",
     "redis": "^3.1.0",
     "serve-favicon": "^2.5.0",
+    "simple-ssh": "^1.0.0",
     "socket.io": "^2.4.1",
     "ssh2": "^0.8.9",
     "uuid": "^8.3.2",
-    "validator": "^12.2.0"
-  },
-  "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^3.6.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^5.1.0",
-    "standard": "^14.3.4",
-    "standard-version": "^9.1.0",
-    "style-loader": "^1.3.0",
-    "terser-webpack-plugin": "^2.3.5",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.2.2",
-    "webpack-stream": "^5.2.1",
-    "xterm": "^4.10.0",
-    "xterm-addon-fit": "^0.3.0",
-    "xterm-addon-search": "^0.5.0",
-    "xterm-addon-web-links": "^0.2.1"
+    "validator": "^13.5.2",
+    "webpack": "^5.33.2"
   }
 }
