--- a/src/server/package.json
+++ b/src/server/package.json
@@ -28,9 +28,9 @@
     "pg": "^8.5.1",
     "redis": "^3.1.0",
     "serve-favicon": "^2.5.0",
-    "simple-ssh": "^1.0.0",
     "socket.io": "^2.4.1",
     "ssh2": "^0.8.9",
+    "ssh2-connect": "^3.1.0",
     "uuid": "^8.3.2",
     "validator": "^13.5.2",
     "webpack": "^5.33.2"
